* Fixes attempt input on edit instance details dialog for three digit numbers * Restricts width of score dialogs * QuestionPreview now optionally shows the score percentage and is now visually contained * QuestionScoreDetails now renders as a column on smaller screen sizes

--- a/internal/src/components/modal-instance-details.scss
+++ b/internal/src/components/modal-instance-details.scss
@@ -24,7 +24,7 @@ $color-text-disabled: lighten($color-text, 60%);
 	}
 
 	input[type='number'] {
-		width: 3em;
+		width: 4em;
 		font-size: 1em;
 		margin-right: 1em;
 		border-radius: $dimension-rounded-radius;
