--- a/internal/src/components/modal-score-details.scss
+++ b/internal/src/components/modal-score-details.scss
@@ -4,6 +4,7 @@
 
 .repository--modal.scoreDetails {
 	width: calc(100% - 2em);
+	max-width: 85em;
 
 	.modal-content {
 		padding: 0;
